Schedule F post edit in progress

--- a/front-end/src/app/forms/sched-f-core/sched-f-core.component.html
+++ b/front-end/src/app/forms/sched-f-core/sched-f-core.component.html
@@ -751,7 +751,7 @@
                 (click)="previousStep()">
                 Previous
               </button>
-              <button *ngIf="scheduleAction === aditScheduleAction" 
+              <button *ngIf="scheduleAction === editScheduleAction"
                 class="btn btn-previous btn-left" type="button" (click)="cancel()">
                 Cancel
               </button>
