adding submit_report to handle F99 form type

--- a/django-backend/templates/email_ack.html
+++ b/django-backend/templates/email_ack.html
@@ -481,14 +481,16 @@ Your filing was received and accepted by our system on {{data.updated_at}}<br><b
 <tr style="vertical-align: top; padding: 0; font-family: karla, Arial, Helvetica, sans-serif ; font-weight: normal; line-height: 2; font-size: 16px; margin: 0 0 0px; padding: 0;" align="left"> <td><b>Committee ID:</b> </td><td>{{data.committeeid}}</td></tr>
 <tr style="vertical-align: top; padding: 0; font-family: karla, Arial, Helvetica, sans-serif ; font-weight: normal; line-height: 2; font-size: 16px; margin: 0 0 0px; padding: 0;" align="left"> <td><b>Committee name:</b></td><td>{{data.committeename}}</td></tr>
 <tr style="vertical-align: top; padding: 0; font-family: karla, Arial, Helvetica, sans-serif ; font-weight: normal; line-height: 2; font-size: 16px; margin: 0 0 0px; padding: 0;" align="left"> <td><b>Form type:</b></td><td>{{data.form_type}}  </td></tr>
+<tr style="vertical-align: top; padding: 0; font-family: karla, Arial, Helvetica, sans-serif ; font-weight: normal; line-height: 2; font-size: 16px; margin: 0 0 0px; padding: 0;" align="left"> <td><b>Schedule:</b></td><td>{{data.report_desc}}  </td></tr>
+<tr style="vertical-align: top; padding: 0; font-family: karla, Arial, Helvetica, sans-serif ; font-weight: normal; line-height: 2; font-size: 16px; margin: 0 0 0px; padding: 0;" align="left"> <td><b>From/Through:</b></td><td>{{data.coverage_start_date}} - {{data.coverage_end_date}}</td></tr>
 <tr style="vertical-align: top; padding: 0; font-family: karla, Arial, Helvetica, sans-serif ; font-weight: normal; line-height: 2; font-size: 16px; margin: 0 0 0px; padding: 0;" align="left"> <td><b>Software/Version:</b></td><td valign="bottom">FECfile/8.3.0</td></tr>
 </tbody></table>
 
-</p>
+<!-- </p>
 <p class="lead" style="color: #000000; font-family: karla, Arial, Helvetica, sans-serif; font-weight: normal; line-height: 1.6; font-size: 16px; margin: 0 0 0px; padding: 0;" align="left">
 Review your submitted report: <br>
 <a href="https://efoservices.fec.gov/webcheck/services/results/@REPLACE_SUBMISSION_ID" style="color:#0AACFA">https://efoservices.fec.gov/webcheck/services/results/@REPLACE_SUBMISSION_ID</a><br><br>
-</p>
+</p> -->
 
 
 <hr style="border-top: 1.5px solid #e8e8e8; background: transparent;">
