update h4/h6 summary page memo column

--- a/front-end/src/app/forms/sched-h4/sched-h4.component.html
+++ b/front-end/src/app/forms/sched-h4/sched-h4.component.html
@@ -168,6 +168,10 @@
                             (click)="changeSortDirection('non_federal_percent')">Nonfederal
                             <i class="fa fa-sort" aria-hidden="false"></i>
                         </th>
+                        <th [@fadeInOut]
+                            (click)="changeSortDirection('memo_code')">Memo
+                            <i class="fa fa-sort" aria-hidden="false"></i>
+                        </th>
                     </tr>
                 </thead>
                 <tbody>
@@ -202,10 +206,7 @@
                         <td>{{ item.expenditure_date | date: 'MM/dd/yyyy' }}</td>   
                         <td>{{ item.fed_share_amount | currency:'USD':'symbol-narrow':'1.2-2' }}</td>
                         <td>{{ item.non_fed_share_amount | currency:'USD':'symbol-narrow':'1.2-2' }}</td>
-                        <td>
-                            <div *ngIf="item.memo_code == 'X'"><input type="checkbox" checked onclick="return false;">Memo</div>
-                            <div *ngIf="item.memo_code != 'X'"><input type="checkbox" onclick="return false;">Memo</div>                            
-                        </td>
+                        <td>{{ item.memo_code }}</td>
 
                         <td class="bulk_action" >
                             <div [@fadeInOut] class="btn-group" ngbDropdown role="group" aria-label="Action dropdown">
@@ -258,11 +259,7 @@
                             <td>{{ itemChild.expenditure_date | date: 'MM/dd/yyyy' }}</td>   
                             <td>{{ itemChild.fed_share_amount | currency:'USD':'symbol-narrow':'1.2-2' }}</td>
                             <td>{{ itemChild.non_fed_share_amount | currency:'USD':'symbol-narrow':'1.2-2' }}</td>
-                            <td>
-                                <div *ngIf="itemChild.memo_code == 'X'"><input type="checkbox" checked onclick="return false;">Memo</div>
-                                <div *ngIf="itemChild.memo_code != 'X'"><input type="checkbox" onclick="return false;">Memo</div>                            
-                            </td>
-
+                            <td>{{ itemChild.memo_code }}</td>
                             <td class="bulk_action" >
                                 <div [@fadeInOut] class="btn-group" ngbDropdown role="group" aria-label="Action dropdown">
             
