update h3 'Aggregate Amount' to 'Total Amount'

--- a/front-end/src/app/forms/sched-h3/sched-h3.component.html
+++ b/front-end/src/app/forms/sched-h3/sched-h3.component.html
@@ -296,7 +296,7 @@
                   <i class="fa fa-sort" aria-hidden="false"></i>
                 </th>
                 <th [@fadeInOut] (click)="changeSortDirection('federal_percent')">
-                  Aggregate Amount
+                  Total Amount
                   <i class="fa fa-sort" aria-hidden="false"></i>
                 </th>
               </tr>
@@ -412,7 +412,7 @@
               <i class="fa fa-sort" aria-hidden="false"></i>
             </th>
             <th [@fadeInOut] (click)="changeSortDirection('federal_percent')">
-              Aggregate Amount
+              Total Amount
               <i class="fa fa-sort" aria-hidden="false"></i>
             </th>
           </tr>
