let Browse Receipts & Browse Disbursements button directing to right page

--- a/front-end/src/app/forms/form-3x/financial-summary/financial-summary.component.html
+++ b/front-end/src/app/forms/form-3x/financial-summary/financial-summary.component.html
@@ -68,7 +68,7 @@
           <button
             type="button"
             class="btn btn-secondary-gray btn-left"
-            (click)="viewTransactions()"
+            (click)="viewTransactions('receipts')"
           >
            Browse Receipts
           </button>
@@ -77,7 +77,7 @@
           <button
             type="button"
             class="btn btn-secondary-gray btn-left"
-            (click)="viewTransactions()"
+            (click)="viewTransactions('disbursements')"
           >
            Browse Disbursements
           </button>
