--- a/front-end/src/app/forms/sched-f-core/sched-f-core.component.html
+++ b/front-end/src/app/forms/sched-f-core/sched-f-core.component.html
@@ -7,6 +7,9 @@
 <ng-template #rtCommitteeId let-r="result" let-t="term">
   <ngb-highlight [result]="formatTypeaheadCommitteeId(r)" [term]="t"></ngb-highlight>
 </ng-template>
+<ng-template #rtPayeeCommitteeId let-r="result" let-t="term">
+  <ngb-highlight [result]="formatTypeaheadPayeeCommitteeId(r)" [term]="t"></ngb-highlight>
+</ng-template>
 <ng-template #rtCandidateId let-r="result" let-t="term">
   <ngb-highlight [result]="formatTypeaheadCandidateId(r)" [term]="t"></ngb-highlight>
 </ng-template>
@@ -66,6 +69,7 @@
                   type="radio"
                   formControlName="coordinated_exp_ind"
                   value="Y"
+                  (change)="onFilerChange('Y')"
                 />
                 Yes
               </label>
@@ -83,6 +87,7 @@
                   type="radio"
                   formControlName="coordinated_exp_ind"
                   value="N"
+                  (change)="onFilerChange('N')"
                 />
                 No
               </label>
@@ -110,7 +115,7 @@
                 [style.height]="'30px'"
                 [maxlength]="'9'"
                 [ngClass]="
-                  frmIndividualReceipt.get('designating_cmte_id')?.invalid &&
+                  frmIndividualReceipt.get('designating_cmte_id')?.invalid && isDesignatedFiler &&
                   (frmIndividualReceipt.touched || frmIndividualReceipt.dirty)
                     ? 'input-field-error'
                     : ''
@@ -138,7 +143,7 @@
                 [style.height]="'30px'"
                 [maxlength]="'200'"
                 [ngClass]="
-                  frmIndividualReceipt.get('designating_cmte_name')?.invalid &&
+                  frmIndividualReceipt.get('designating_cmte_name')?.invalid && isDesignatedFiler &&
                   (frmIndividualReceipt.touched || frmIndividualReceipt.dirty)
                     ? 'input-field-error'
                     : ''
@@ -154,7 +159,7 @@
                 Subordinate Committee ID Number
               </label>
               <input class="form-control" 
-                type="text" 
+                type="text"
                 [formControlName]="'subordinate_cmte_id'"
                 [attr.name]="'subordinate_cmte_id'"
                 id="subordinate_cmte_id"
@@ -167,12 +172,6 @@
                 [style.width]="'45%'" 
                 [style.height]="'30px'"
                 [maxlength]="'9'"
-                [ngClass]="
-                  frmIndividualReceipt.get('subordinate_cmte_id')?.invalid &&
-                  (frmIndividualReceipt.touched || frmIndividualReceipt.dirty)
-                    ? 'input-field-error'
-                    : ''
-                "                            
               />
             </div>
           </div>
@@ -181,8 +180,8 @@
               <label for="">
                   Subordinate Committee Name
               </label>
-              <input class="form-control" 
-                type="text" 
+              <input class="form-control"
+                type="text"
                 [formControlName]="'subordinate_cmte_name'"
                 [attr.name]="'subordinate_cmte_name'"
                 [style.width]="'100%'" 
@@ -195,12 +194,6 @@
                 [resultTemplate]="rtCommitteeName" 
                 [inputFormatter]="formatterCommitteeName"
                 (selectItem)="handleSelectedSFCommittee($event, 'subordinate_cmte_name')"
-                [ngClass]="
-                  frmIndividualReceipt.get('subordinate_cmte_name')?.invalid &&
-                  (frmIndividualReceipt.touched || frmIndividualReceipt.dirty)
-                    ? 'input-field-error'
-                    : ''
-                "              
               />
             </div>
           </div>        
@@ -219,12 +212,6 @@
                 id="subordinate_cmte_street_1"
                 [style.height]="'30px'"
                 [maxlength]="'34'"
-                [ngClass]="
-                  frmIndividualReceipt.get('subordinate_cmte_street_1')?.invalid &&
-                  (frmIndividualReceipt.touched || frmIndividualReceipt.dirty)
-                    ? 'input-field-error'
-                    : ''
-                "                
               />
             </div>
           </div>
@@ -241,12 +228,6 @@
                 [style.height]="'30px'"
                 id="subordinate_cmte_street_2"
                 [maxlength]="'34'"
-                [ngClass]="
-                  frmIndividualReceipt.get('subordinate_cmte_street_2')?.invalid &&
-                  (frmIndividualReceipt.touched || frmIndividualReceipt.dirty)
-                    ? 'input-field-error'
-                    : ''
-                "                
               />
             </div>
           </div>        
@@ -265,12 +246,6 @@
                 [style.width]="'66%'" 
                 [style.height]="'30px'"
                 [maxlength]="'30'"
-                [ngClass]="
-                  frmIndividualReceipt.get('subordinate_cmte_city')?.invalid &&
-                  (frmIndividualReceipt.touched || frmIndividualReceipt.dirty)
-                    ? 'input-field-error'
-                    : ''
-                "                
               />
             </div>
           </div>
@@ -287,12 +262,7 @@
                 bindValue="code" 
                 bindLabel="code" 
                 [selectOnTab]="true"
-                  [ngClass]="
-                  frmIndividualReceipt.get('subordinate_cmte_state')?.invalid &&
-                  (frmIndividualReceipt.touched || frmIndividualReceipt.dirty)
-                    ? 'forms__select-error'
-                    : ''
-                ">
+                >
                 <ng-template ng-option-tmp let-item="item" let-search="searchTerm" let-index="index">
                   <span>{{ item.code + ' - ' + item.name }}</span>
                 </ng-template>
@@ -312,12 +282,6 @@
                 [style.width]="'33%'" 
                 [style.height]="'30px'"
                 [maxlength]="'10'"
-                [ngClass]="
-                  frmIndividualReceipt.get('subordinate_cmte_zip')?.invalid &&
-                  (frmIndividualReceipt.touched || frmIndividualReceipt.dirty)
-                    ? 'input-field-error'
-                    : ''
-                "                
               />
               <div class="error-text" *ngIf="
                 (frmIndividualReceipt.touched || frmIndividualReceipt.dirty) &&
@@ -395,7 +359,8 @@
                               && !isFieldName(col?.name, 'donor_cmte_name')
                               && !isFieldName(col?.name, 'beneficiary_cmte_id')
                               && !isFieldName(col?.name, 'beneficiary_cmte_name') 
-                              && !isFieldName(col?.name, 'beneficiary_cand_id') 
+                              && !isFieldName(col?.name, 'beneficiary_cand_id')
+                              && !isFieldName(col?.name, 'payee_cmte_id')
                               " class="form-control" [style.width]="col?.width" [style.height]="col?.height"
                         [attr.type]="col?.type" [attr.name]="col?.name"
                         [attr.readonly]="isFieldReadOnly(col)"
@@ -473,6 +438,20 @@
                         [resultTemplate]="rtOrg" [inputFormatter]="formatterOrgName"
                         (selectItem)="handleSelectedOrg($event, col)" (keyup)="handleFormFieldKeyup($event, col)" 
                         [attr.readonly]="isFieldReadOnly(col)" />
+                      <input *ngIf="isFieldName(col?.name, 'payee_cmte_id')" class="form-control"
+                             [style.width]="col?.width" [style.height]="col?.height" [attr.type]="col?.type"
+                             [attr.name]="col?.name" [attr.value]="col?.value" [maxlength]="col?.validation?.max"
+                             [formControlName]="col?.name" [ngClass]="
+                              frmIndividualReceipt.get(col?.name)?.invalid &&
+                              (frmIndividualReceipt.touched || frmIndividualReceipt.dirty)
+                                ? 'input-field-error'
+                                : ''
+                            " id="typeahead-template-payee-committee-id"
+                             [ngbTypeahead]="searchPayeeCommitteeId"
+                             [focusFirst]=false
+                             [resultTemplate]="rtPayeeCommitteeId"
+                             [inputFormatter]="formatterPayeeCommitteeId"
+                             (selectItem)="handleSelectedCandidate($event, col)" (keyup)="handleFormFieldKeyup($event, col)" />
                       <input *ngIf="isFieldName(col?.name, 'donor_cmte_id') ||
                                 isFieldName(col?.name, 'beneficiary_cmte_id') ||
                                 isFieldName(col?.name, 'beneficiary_cand_id')" class="form-control"
@@ -483,8 +462,8 @@
                             (frmIndividualReceipt.touched || frmIndividualReceipt.dirty)
                               ? 'input-field-error'
                               : ''
-                          " id="typeahead-template-committee-id" 
-                        [ngbTypeahead]="isFieldName(col?.name, 'beneficiary_cand_id') ? searchCandidateId : searchCommitteeId" 
+                          " id="typeahead-template-committee-id"
+                        [ngbTypeahead]="isFieldName(col?.name, 'beneficiary_cand_id') ? searchCandidateId : searchCommitteeId"
                         [focusFirst]=false
                         [resultTemplate]="isFieldName(col?.name, 'beneficiary_cand_id') ? rtCandidateId : rtCommitteeId" 
                         [inputFormatter]="isFieldName(col?.name, 'beneficiary_cand_id') ? formatterCandidateId: formatterCommitteeId"
