--- a/front-end/src/app/shared/partials/submit/submit.component.html
+++ b/front-end/src/app/shared/partials/submit/submit.component.html
@@ -1,6 +1,6 @@
 <div class="submit-container">
   <header>
-    <h1 class="text-left">Thank You!</h1>
+    <h1 class="text-left">Accepted!</h1><br>
     <hr />
   </header>
   <section>
